# parts_warehouse

./: .env.template  Dockerfile  README.md  README.txt  docker-compose.yml  entrypoint.sh  tasks.py  test.py
poetry/: pyproject.toml
src/categories/: filters.py  models.py  serializers.py  urls.py  views.py
src/main/: settings.py  urls.py  wsgi.py
src/parts/: filters.py  models.py  serializers.py  urls.py  views.py
