[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-hashid-field = "^3.4.0"
pymongo = {extras = ["srv", "tls"], version = "^4.6.1"}
dnspython = "^2.5.0"
django-rest-framework-mongoengine = "^3.4.1"
mongoengine = "^0.27.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
